--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Game_FlyStars</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="txt_start">Начать игру</string>
+    <string name="txt_rules">Правила</string>
+    <string name="txt_exit">Выход</string>
 </resources>
