add rules fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="txt_start">Начать игру</string>
     <string name="txt_rules">Правила</string>
     <string name="txt_exit">Выход</string>
+    <string name="txt_rules_header">Правила игры</string>
+    <string name="txt_rules_desc">Суть игры Авиатор проста - следите за графиком и за взлетающим воздушным бортом. Главное вовремя остановить полёт. Чем выше поднимается борт, тем большое увеличивается коэффициент (икс), в итоге игрок может заработать на ставке приличную сумму. Все зависит от азарта и терпения!</string>
 </resources>
