--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="_1_0">1.0</string>
     <string name="_2_0">2.0</string>
     <string name="_1_00">1.00</string>
+    <string name="fly">Улетел!</string>
 </resources>
