--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Game_FlyStars</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">Fly Stars</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="txt_start">Начать игру</string>
     <string name="txt_rules">Правила</string>
